# kitagentsdk

./: .gitignore  MANIFEST.in  README.md  _compose.sh  pyproject.toml  requirements.txt
scripts/: publish_pypi.sh  update_globally.sh
src/kitagentsdk/: __init__.py  agent.py  callbacks.py  cli.py  context.py  helpers.py  kit.py  pyproject.toml  setup.py
src/kitagentsdk/templates/: .gitignore.template  Makefile.template  README.md.template  main.py.template  manifest.json.template  requirements.txt.template
