# kitagentsdk/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitagentsdk"
version = "0.1.0"
authors = [
  { name="Kit Developer", email="dev@example.com" },
]
description = "A SDK for developing agents for the Kit platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "stable-baselines3",
]

[project.urls]
"Homepage" = "https://github.com/example/kitagentsdk"

[project.scripts]
kitagentcli = "kitagentsdk.cli:main"