# kitagentsdk/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitagentsdk"
version = "0.1.0"
description = "A SDK for developing agents for the Kit platform"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "stable-baselines3"
]

[project.scripts]
kitagentcli = "kitagentsdk.cli:main"

[project.urls]
Homepage = "https://github.com/example/kitagentsdk"

[tool.setuptools.packages.find]
where = ["src"]